[package]
name = "cryptli"
version = "0.1.0"
authors = ["Dominic Bachmann"]
description = "Cryptli lib"
license = "MIT/Apache-2.0"
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-cli = "0.2.69"